# Energy-Benchmark-Languages-Android

./: .gitignore  helper.sh
CLBG/: exports.sh  warning.md
CLBG/C++/binary-trees/: Makefile  warning.md
CLBG/C++/fannkuch-redux/: Makefile
CLBG/C++/fasta/: Makefile  fasta.cpp
CLBG/C++/mandelbrot/: Makefile  mandelbrot.cpp
CLBG/C++/n-body/: Makefile
CLBG/C++/pidigits/: Makefile  pidigits.cpp
CLBG/C++/revcomp/: Makefile  revcomp.cpp
CLBG/C++/spectral-norm/: Makefile  spectralnorm.cpp  warning.md
CLBG/C/binary-trees/: Makefile
CLBG/C/fannkuch-redux/: Makefile
CLBG/C/fasta/: Makefile  fasta_run
CLBG/C/mandelbrot/: Makefile
CLBG/C/n-body/: Makefile  nbody.c
CLBG/C/pidigits/: Makefile
CLBG/C/reverse-complement/: Makefile  revcomp.c
CLBG/C/spectral-norm/: Makefile
CLBG/CSharp/binary-trees/: Makefile
CLBG/CSharp/fannkuch-redux/: Makefile  fannkuch-redux.cs
CLBG/CSharp/fasta/: Makefile  fasta.cs  warning.md
CLBG/CSharp/mandelbrot/: Makefile  mandelbrot.cs
CLBG/Haskell/reverse-complement/: CHANGELOG.md  Makefile  reverse-complement.cabal  warning.md
CLBG/Haskell/reverse-complement/app/: Main.hs
CLBG/Racket/: warning.md
CLBG/SmallTalk/: error.md
Compilers/: all.sh  todo.md
Compilers/info/: dev_environments.md  unavailable.md
Compilers/scripts/: c.sh  cpp.sh  csharp.sh  dart.sh  erlang.sh  fortran.sh  go.sh  haskell.sh  java.sh  javascript.sh  kotlin.sh  lisp.sh  lua.sh  perl.sh  python.sh  racket.sh  rust.sh  smalltalk.sh  swift.sh
HelloWorld/: README.md  hello.erl  hello.f90  hello.php  hello.rkt  hello.st
(+292 files in other folders)
